# msampathkumar.github.io

./: .geminiignore  .gitignore  .mdformat.toml  404.html  AGENTS.md  Makefile  README.md  _config.yml  about.md  index.html  index.md  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.beads/: issues.jsonl
.gemini/git/: review.toml
Gemini/: index.html
Gemini_Social_Media_Plan/: index.html
HelloWorld/: index.html
_data/: samplelist.yml
_old_assets/: MircroSevricesScalaingApps.drawio  README.md
_posts/: 2016-12-02-welcome-to-jekyll.markdown  2017-07-06-97-fractal-analytics-time-series-challenge.md  2017-07-06-97_fractal_analytics_time_series_challenge.md  2017-07-10-96-cnn-app-logos-impressions.md  2017-07-15-95-autompg-dataset.md  2017-07-24-94-data-science-sessions.md  2020-12-17-BOOK2-AWS-Intro.md  2020-12-17-BOOK2-Index.md  2020-12-17-Book-Index.md  2020-12-17-Book-Introduciton.md  posts.yml
_site/: 94_data_science_sessions.html  95_autompg_dataset.html  96-app-logos-impression.html  97-fractal-analytics-time-series-challenge.html  LICENSE  README.md  feed.xml  index.html
about/: index.html
blog/: index.html
blog/posts/: index.html
cookbook/: index.html
docs/: Gemini_Social_Media_Plan.md  about.md  cookbook.md  index.md  llms-full.txt  llms.txt
events/: index.html
gemini-features-yt-shorts/: index.html
google-cloud-gemini-cookbook/: index.html
hooks/: latest_posts.py
models/: index.html
scripts/: gen_llms_full.py  import_devto.py  localize_images.py  new_post.py  score_post.py
search/: search_index.json
services/: index.html
(+238 files in other folders)
