[project]
name = "msampathkumar-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "google-genai>=1.27.0",
    "mdformat>=0.7.22",
    "mdformat-black>=0.1.1",
    "mdformat-config>=0.2.1",
    "mdformat-shfmt>=0.2.0",
    "mkdocs-material>=9.6.15",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "streamlit>=1.47.0",
]
